
BuildStatus
---------------------
* Add attribute 'vetoIfFailing'. Will abort the build if the project being monitored had the last build fail (CC-842).

CMSynergy
---------------------
* Allow reconfiguring of "system testing", "insulated development" purpose-based projects. Patch by David Corley

CompositeBuilder
---------------------
* Improve processing of build results to make it faster with large log files (CC-826). Patch by David Webster.

CruiseControlConfig
---------------------
* LabelIncrementers are no longer special cased, they are now treated like any other plugin. They must now be added to a project to get a non-default label incrementer and they can be registered with any name; are no longer forced to be named 'labelincrementer'. You can no longer set the labelincrementer classname via JMX. This change is not backwards compatible for users that were registering an alternative label incrementer but not placing the <labelincrementer> element in each project.

CVS
---------------------
* Add attribute "skipEmailsFetching" for people who don't have CVSROOT/users and don't want the (harmless) messages in the log when that file isn't found (CC-841). Patch by Grzegorz Oledzki
* Add attribute 'recurseLocalWorkingCopy' which allows localWorkingCopy to point at a directory not under version control; reduces effort when project has multiple projects in parallel directories under a non-versioned root (CC-820). Based on patch by Detlef Keil.

Darcs
---------------------
* Fix Darcs support (CC-847). Patch by Marc Fontaine.

DateFormat
---------------------
* The ability to set the date format in the build loop has been removed. This fixes the issue where setting the date format on one project would affect all of them (CC-355), would cause build status messages to not display in the reporting application (CC-797). Build loop now uses ISO 8601 format for storing date stamp information (CC-353) which is a change from the previous default format.

JMX