@@ -8,6 +8,7 @@ antbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.AntBootstrapper
 clearcasebootstrapper=net.sourceforge.cruisecontrol.bootstrappers.ClearCaseBootstrapper
 clearcaseviewstrapper=net.sourceforge.cruisecontrol.bootstrappers.ClearCaseViewstrapper
 cmsynergybootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CMSynergyBootstrapper
+cmsynergybaselinebootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CMSynergyBaselineBootstrapper
 currentbuildstatusbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
 cvsbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CVSBootstrapper
 execbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.ExecBootstrapper
